Fixed spacing bug with main content of page and header

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -46,7 +46,7 @@ span .MuiBadge-colorPrimary {
 
 .mainbody,
 .checkoutBody {
-  padding: 14px 16px;
+  padding: 20px 16px;
   text-decoration: none;
   display: block;
   text-align: center;
